feat(back): add more fields to inbox and request models
