# docs/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: "3.1.0"
 info:
   version: "1.0.0"
-  title: "Request inbox"
+  title: "RequestInbox"
   description: Register requests
 servers:
   - url: http://localhost:8080/api/v1
@@ -134,6 +134,8 @@ components:
       properties:
         ID:
           $ref: "#/components/schemas/InboxID"
+        Name:
+          type: string
         Timestamp:
           type: integer
           format: int64
@@ -170,7 +172,18 @@ components:
             type: string
         Body:
           type: string
-        Path:
+        URI:
+          type: string
+        Method:
+          type: string
+        Host:
+          type: string
+        RemoteAddr:
+          type: string
+        ContentLength:
+          type: integer
+          format: int64
+        Protocol:
           type: string
     Error:
       type: object
